--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs": "0.0.2",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
+    "mem": "^6.0.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "npm-check": "^5.9.0",
